--- a/backend/integracao/config.json
+++ b/backend/integracao/config.json
@@ -7,6 +7,7 @@
     "UseWindowsAuth": true
   },
   "Sqlite": {
-    "Path": "C:\\Users\\MAX\\Documents\\workspace\\IA\\backend\\data\\database.sqlite"
+    "Path": "..\\data\\database.sqlite"
   }
 }
+
